<resources>
    <string name="app_name"><b>Zua</b>-job</string>
    <string name="sinscrire">Creer un compte</string>

    <string name="Lorems">
        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
    </string>
    <string name="Lorems2">
        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco
    </string>
    <string name="Lorem_short">
        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
    </string>
    <string name="type_user_txt">Vous êtes un (e) ?</string>
    <string name="prestateur_de_services">Prestateur des services</string>
    <string name="utilisateur_simple">Utilisateur simple</string>
    <string name="votre_phone_numbe">Vérification de votre numéro téléphonique</string>
    <string name="suivant">Suivant</string>
    <string name="confiremer_le_code">Confirmation du code</string>
    <string name="confirmer">Confirmer</string>
    <string name="votre_identite">Informations personnelles</string>
    <string name="ecurisez_votre_compte">Securisez votre compte</string>
    <string name="centre_interet">Vos préferences</string>
    <string name="lancez_vous">Lancez-vous</string>
    <string name="autre_info">Autres informations</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="menu_alaune">A la une</string>
    <string name="menu_Categorie">Toute les catégories</string>
    <string name="menu_annonces">Mes annonces</string>
    <string name="menu_services">Mes services</string>
    <string name="menu_rdv">Mes rendez-vous</string>
    <string name="menu_sollicitations">Mes sollicitations</string>
    <string name="menu_discussions">Mes discussions</string>
    <string name="menu_profil">Mon profil</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_close">Fermer</string>
    <string name="menu_quitter">Se deconnecter</string>
    <string name="title_activity_details_publication">Details_publication</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="menu_publication">Nouvelle publication</string>


    <string name="Share_message">
        Téléchargez l\'application Zua-Job sur Google play
    </string>
    <string name="subtitre">se rendre service entre nous devint plus facile</string>
    <string name="connecter_vous">Connectez-vous dès maintenant avec</string>
    <string name="Se_connecter">Se connecter</string>
    <string name="entrer_le_code">Entrer le code</string>
    <string name="Nom">Nom</string>
    <string name="Prénom">Prénom</string>
    <string name="birthday">Date de naissance</string>
    <string name="passeword">Mot de passe</string>
    <string name="confirme_code">Confirmer le mot de passe</string>
    <string name="Activer_les_notifications">Activer les notifications</string>
    <string name="Devenir_prestateur">Changer de type de compte</string>

    <string name="advices_cotation">
        Veuillez coter la préstation du jobeur en par rapport avec le travail effectué,
        et n\'hésitez pas à lui coter excellent si sa préstation a été à la hauteur des vos attentes
    </string>
    <string name="requied_adresse">
        Veuillez renseigner votre adresse physique,
        votre residence ou domicile et autres informations sur vous afin que ceux qui vont vous
        solliciter puisse être confiant
    </string>
    <string name="about">A propos de Zua job</string>
    <string name="menu_rdv_attente">Sollicitations</string>
    <string name="menu_rdv_confirme">Postullances</string>
    <string name="Activer_les_alarmes">Activer les alarmes</string>
    <string name="changerpasse">Changer mon mot de passe</string>
    <string name="about_app">
        Vous donnez la possibilité de trouver des services que vous avez besoin et de publier des annonces de services afin de trouver des competences pour vous aider est le but même de cette application
        vous pouvez pu
    </string>
    <string name="menu_notif">Notification</string>


</resources>
