<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_annonce"
        android:icon="@drawable/ic_menu_slideshow"
        android:title="@string/menu_annonces" />
    <item
        android:id="@+id/nav_services"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/menu_services" />

    <item
        android:id="@+id/nav_rdv"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/menu_rdv" />
    <item
        android:id="@+id/nav_soliicioation"
        android:icon="@drawable/ic_menu_send"
        android:title="@string/menu_sollicitations" />
    <item
        android:id="@+id/nav_discuusion"
        android:icon="@drawable/ic_menu_send"
        android:title="@string/menu_discussions" />


</menu>
