<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/publication"
        android:icon="@drawable/ic_menu_slideshow"
        android:title="@string/menu_publication" />
    <item
        app:showAsAction="always"
        android:id="@+id/profil"
        android:icon="@drawable/ic_user_white"
        android:title="@string/menu_profil" />
    <item
        app:showAsAction="never"
        android:id="@+id/share"
        android:title="Partager le lien" />
    <item
        app:showAsAction="always"
        android:id="@+id/action_notif"
        android:icon="@drawable/ic_notif"
        android:title="@string/menu_notif" />
    <item
        app:showAsAction="always"
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_setting_white"
        android:title="@string/menu_settings" />
    <item
        android:id="@+id/nav_exit"
        android:title="@string/menu_quitter" />
</menu>
