<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_annonce"
        android:icon="@drawable/ic_menu_slideshow"
        android:title="@string/menu_annonces" />

    <item
        android:id="@+id/nav_service_soliicioation"
        android:icon="@drawable/ic_menu_send"
        android:title="Mes services sollicités" />

    <item
        android:id="@+id/nav_rdv"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/menu_rdv" />
    <item
        android:visible="false"
        android:id="@+id/nav_discuusion"
        android:icon="@drawable/ic_menu_send"
        android:title="@string/menu_discussions" />
    
</menu>
