<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fond"
    tools:context=".Front_end.Signup.PhoneConfirm_screen">


    <RelativeLayout
        android:orientation="vertical"
        android:background="#a5000000"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/btn_back_arrow"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_back_primery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:fontFamily="@font/alegreya_sans_thin"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confiremer_le_code"
                android:textSize="35dp"
                android:layout_marginBottom="20dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="250dp"
                android:layout_height="wrap_content">

                <EditText
                    android:textColor="@color/white"
                    android:textColorHint="#8D8D8D"
                    android:hint="@string/entrer_le_code"
                    android:id="@+id/PhoneCodeNumber"
                    android:inputType="number"
                    android:maxLength="9"
                    android:textSize="20dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="HardcodedText" />

            </LinearLayout>

            <TextView
                android:id="@+id/btn_next"
                android:textStyle="bold"
                android:fontFamily="@font/alegreya_sans_thin"
                android:layout_margin="5dp"
                android:gravity="center"
                android:padding="10dp"
                android:background="@drawable/corner_primary_border_white"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/confirmer"
                android:textColor="@color/white"
                android:textSize="15dp" />


            <LinearLayout
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:id="@+id/advice"
                    android:gravity="center"
                    android:padding="10dp"
                    android:fontFamily="@font/alegreya_sans_thin"
                    android:textSize="15dp"
                    android:text="@string/Lorem_short"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <ProgressBar
                    android:visibility="gone"
                    android:id="@+id/progressbar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-7dp"
                    android:backgroundTint="@color/white"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/colorAccent"
                    android:max="100" />

            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>


</LinearLayout>