<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Front_end.Paramettres">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    
                    android:textSize="20dp"
                    android:text="@string/Activer_les_notifications"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    
                    android:fontFamily="@font/alegreya_sans_thin"
                    android:textSize="14dp"
                    android:text="Pour les nousvelles publications et autres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:gravity="end"
                android:padding="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    
                    />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:padding="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    
                    android:textSize="20dp"
                    android:text="@string/Activer_les_alarmes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    
                    android:fontFamily="@font/alegreya_sans_thin"
                    android:textSize="14dp"
                    android:text="Vous alarmer le jour d'un rendez-vous"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:gravity="end"
                android:padding="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/alarme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    
                    />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:padding="10dp"
            android:layout_gravity="center"
            android:background="#C9C9C9"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"/>


        <LinearLayout
            android:padding="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    
                    android:textSize="20dp"
                    android:text="@string/Devenir_prestateur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/type_conte"
                    
                    android:fontFamily="@font/alegreya_sans_thin"
                    android:textSize="14dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:visibility="gone"
                android:gravity="end"
                android:padding="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/prestataire"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    
                    />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/changerpasse"
            android:padding="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    
                    android:textSize="20dp"
                    android:text="@string/changerpasse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    
                    android:fontFamily="@font/alegreya_sans_thin"
                    android:textSize="14dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:padding="10dp"
            android:layout_gravity="center"
            android:background="#C9C9C9"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"/>

        <LinearLayout
            android:id="@+id/about_U"
            android:padding="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                
                android:textSize="20dp"
                android:text="@string/about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </LinearLayout>
        <LinearLayout
            android:padding="10dp"
            android:layout_gravity="center"
            android:background="#C9C9C9"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"/>

    </LinearLayout>


</ScrollView>